@@ -2,6 +2,7 @@ package com.octopus.orchestration.services;
 
 import java.util.List;
 
+import org.apache.commons.lang.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -19,13 +20,17 @@ import com.spotify.docker.client.messages.ContainerInfo;
 
 @Service
 public class ContainersService {
-    
+
     private static final String CONTAINER_NOT_FOUND = "Container not found. Id = ";
 
-    @Autowired
-    private DockerClient dockerClient;
+    private final DockerClient dockerClient;
 
-    public List<Container> listAll()  {
+    @Autowired
+    public ContainersService(DockerClient dockerClient) {
+        this.dockerClient = dockerClient;
+    }
+
+    public List<Container> listAllContainers()  {
         try {
             return dockerClient.getClient().listContainers(ListContainersParam.allContainers());
         } catch (Exception e) {
@@ -33,9 +38,9 @@ public class ContainersService {
         }
     }
 
-    public List<Container> listAll(String status)  {
+    public List<Container> listAllContainers(String status)  {
         try {
-            if (status != null && !status.isBlank()) {
+            if (!StringUtils.isBlank(status)) {
                 status = status.toUpperCase();
                 if (DockerEnums.ACTIVE.name().equals(status)) {
                     return dockerClient.getClient().listContainers(ListContainersParam.withStatusRunning());
@@ -50,17 +55,17 @@ public class ContainersService {
         throw new DockerIllegalArgumentException("Invalid container status");
     }
 
-    public ContainerInfo inspect(String id) {
+    public ContainerInfo inspectContainer(String id) {
         try {
             return dockerClient.getClient().inspectContainer(id);
         } catch(ContainerNotFoundException e) {
             throw new BaseException(CONTAINER_NOT_FOUND + id, HttpStatus.NOT_FOUND);
         } catch (Exception e) {
-            throw new BaseException("Failed to inspect container with id = " + id, HttpStatus.INTERNAL_SERVER_ERROR);
+            throw new BaseException("Failed to inspectContainer container with id = " + id, HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
 
-    public String getLogs(String id) {
+    public String getContainerLogs(String id) {
         try (LogStream stream = dockerClient.getClient().logs(id, LogsParam.stdout(), LogsParam.stderr())) {
             return stream.readFully();
         } catch(ContainerNotFoundException e) {
@@ -70,60 +75,60 @@ public class ContainersService {
         }
     }
 
-    public void delete(String id) {
+    public void deleteContainer(String id) {
         try {
             dockerClient.getClient().removeContainer(id);
         } catch(ContainerNotFoundException e ) {
             throw new BaseException(CONTAINER_NOT_FOUND + id, HttpStatus.NOT_FOUND);
         } catch (Exception e) {
             throw new BaseException("Failed to remove container with id = " + id, HttpStatus.INTERNAL_SERVER_ERROR);
-        } 
+        }
     }
 
-    public void start(List<String> containersIds) {
+    public void startContainer(List<String> containersIds) {
         containersIds.forEach(containerId -> {
             try {
                 dockerClient.getClient().startContainer(containerId);
             } catch(ContainerNotFoundException e ) {
                 throw new BaseException(CONTAINER_NOT_FOUND + containerId, HttpStatus.NOT_FOUND);
             } catch (Exception e) {
-                throw new BaseException("Failed to start container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new BaseException("Failed to startContainer container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
             }
         });
     }
 
-    public void stop(List<String> containersIds) {
+    public void stopContainer(List<String> containersIds) {
         containersIds.forEach(containerId -> {
             try {
                 dockerClient.getClient().stopContainer(containerId, 5);
             } catch(ContainerNotFoundException e ) {
                 throw new BaseException(CONTAINER_NOT_FOUND + containerId, HttpStatus.NOT_FOUND);
             } catch (Exception e) {
-                throw new BaseException("Failed to stop container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new BaseException("Failed to stopContainer container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
             }
         });
     }
 
-    public void kill(List<String> containersIds) {
+    public void killContainer(List<String> containersIds) {
         containersIds.forEach(containerId -> {
             try {
                 dockerClient.getClient().killContainer(containerId);
             } catch(ContainerNotFoundException e ) {
                 throw new BaseException(CONTAINER_NOT_FOUND + containerId, HttpStatus.NOT_FOUND);
             } catch (Exception e) {
-                throw new BaseException("Failed to kill container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new BaseException("Failed to killContainer container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
             }
         });
     }
 
-    public void restart(List<String> containersIds) {
+    public void restartContainer(List<String> containersIds) {
         containersIds.forEach(containerId -> {
             try {
                 dockerClient.getClient().restartContainer(containerId, 5);
             } catch(ContainerNotFoundException e ) {
                 throw new BaseException(CONTAINER_NOT_FOUND + containerId, HttpStatus.NOT_FOUND);
             } catch (Exception e) {
-                throw new BaseException("Failed to restart container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
+                throw new BaseException("Failed to restartContainer container with id = " + containerId, HttpStatus.INTERNAL_SERVER_ERROR);
             }
         });
     }
